// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`old streams test > OR in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "filters": [
        {
          "sql": "? = 'test'",
          "values": [
            {
              "column": "name",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 460428812,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > on parameter data 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "sql": "?",
                "values": [
                  {
                    "column": "value",
                    "sqlPosition": [
                      0,
                      1,
                    ],
                  },
                ],
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > on parameter data and table 1`] = `
{
  "buckets": [
    {
      "hash": 302346399,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 394975399,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "label",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "sql": "?",
                "values": [
                  {
                    "column": "value",
                    "sqlPosition": [
                      0,
                      1,
                    ],
                  },
                ],
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
        {
          "lookup": {
            "idInStage": 1,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > parameter and auth match on same column 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "filters": [],
            "functionInputs": [],
            "functionName": "json_each",
            "outputs": [
              {
                "sql": "?",
                "values": [
                  {
                    "column": "value",
                    "sqlPosition": [
                      0,
                      1,
                    ],
                  },
                ],
              },
            ],
            "type": "table_valued",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "type": "intersection",
          "values": [
            {
              "expr": {
                "sql": "? ->> '$.' || 'issue'",
                "values": [
                  {
                    "request": "subscription",
                    "sqlPosition": [
                      0,
                      1,
                    ],
                  },
                ],
              },
              "type": "request",
            },
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > parameter value in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 166084671,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 95751585,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "sql": "?",
          "values": [
            {
              "column": "is_admin",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 125105203,
      "output": [],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > row value in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > in > two subqueries 1`] = `
{
  "buckets": [
    {
      "hash": 355014290,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 509357917,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 508166872,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "user_a",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "user_b",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "friends",
      },
    },
    {
      "filters": [],
      "hash": 163672218,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "user_b",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "user_a",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "friends",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > nested subqueries 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "sql": "?",
          "values": [
            {
              "column": "is_admin",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 125105203,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "users",
      },
    },
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [],
            "lookup": 0,
            "type": "parameter",
          },
        ],
        [
          {
            "instantiation": [
              {
                "lookup": {
                  "idInStage": 0,
                  "stageId": 0,
                },
                "resultIndex": 0,
                "type": "lookup",
              },
            ],
            "lookup": 1,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 1,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > distribute and 1`] = `
{
  "buckets": [
    {
      "hash": 245991010,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 525379431,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 2",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 286289119,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 2",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 96920671,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "sql": "? ->> '$.' || 'is_admin'",
          "values": [
            {
              "request": "auth",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > double negation 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > negated and 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 309238741,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": "NOT "length"(?) = 5",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                13,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 377415427,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > normalization > negated or 1`] = `
{
  "buckets": [
    {
      "hash": 153980926,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": "NOT "length"(?) = 5",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                13,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 223123304,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > parameter match or request condition 1`] = `
{
  "buckets": [
    {
      "hash": 64769288,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 166084671,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 454807063,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 95751585,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "sql": "? ->> '$.sub'",
            "values": [
              {
                "request": "auth",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "sql": "? ->> '$.' || 'is_admin'",
          "values": [
            {
              "request": "auth",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > parameter match or row condition 1`] = `
{
  "buckets": [
    {
      "hash": 64769288,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 534546607,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 454807063,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) = 3",
          "values": [
            {
              "column": "name",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 280261367,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "sql": "? ->> '$.sub'",
            "values": [
              {
                "request": "auth",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > request condition or request condition 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [
        {
          "sql": "? ->> '$.' || 'a' OR ? ->> 'b'",
          "values": [
            {
              "request": "auth",
              "sqlPosition": [
                0,
                1,
              ],
            },
            {
              "request": "auth",
              "sqlPosition": [
                21,
                1,
              ],
            },
          ],
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > row condition or parameter condition 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 436876819,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 5",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 373797931,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [
        {
          "sql": "? ->> '$.' || 'is_admin'",
          "values": [
            {
              "request": "auth",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > row condition or row condition 1`] = `
{
  "buckets": [
    {
      "hash": 155890019,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 5 OR "json_array_length"(?) > 1",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
            {
              "column": "tagged_users",
              "sqlPosition": [
                39,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 67072829,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > or > subquery or token parameter 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
    {
      "hash": 215141619,
      "sources": [
        1,
      ],
      "uniqueName": "stream|1",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 264070699,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "owner_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "issues",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
    {
      "bucket": 1,
      "lookupStages": [],
      "requestFilters": [
        {
          "sql": "? ->> '$.' || 'is_admin'",
          "values": [
            {
              "request": "auth",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > row condition 1`] = `
{
  "buckets": [
    {
      "hash": 436876819,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 5",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 373797931,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > row filter and stream parameter 1`] = `
{
  "buckets": [
    {
      "hash": 128629938,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "sql": ""length"(?) > 5",
          "values": [
            {
              "column": "content",
              "sqlPosition": [
                9,
                1,
              ],
            },
          ],
        },
      ],
      "hash": 106392262,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "sql": "? ->> '$.' || 'id'",
            "values": [
              {
                "request": "subscription",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > stream parameter 1`] = `
{
  "buckets": [
    {
      "hash": 393524843,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 297208864,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "issue_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "expr": {
            "sql": "? ->> '$.' || 'id'",
            "values": [
              {
                "request": "subscription",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
          "type": "request",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > table alias 1`] = `
{
  "buckets": [
    {
      "hash": 436460920,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 96159643,
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "account_id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "account_member",
      },
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 258396764,
      "output": [
        {
          "sql": "?",
          "values": [
            {
              "column": "account_id",
              "sqlPosition": [
                0,
                1,
              ],
            },
          ],
        },
      ],
      "partition_by": [
        {
          "expr": {
            "sql": "?",
            "values": [
              {
                "column": "id",
                "sqlPosition": [
                  0,
                  1,
                ],
              },
            ],
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "account_member",
      },
    },
  ],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [
        [
          {
            "instantiation": [
              {
                "expr": {
                  "sql": "? ->> '$.sub'",
                  "values": [
                    {
                      "request": "auth",
                      "sqlPosition": [
                        0,
                        1,
                      ],
                    },
                  ],
                },
                "type": "request",
              },
            ],
            "lookup": 0,
            "type": "parameter",
          },
        ],
      ],
      "requestFilters": [],
      "sourceInstantiation": [
        {
          "lookup": {
            "idInStage": 0,
            "stageId": 0,
          },
          "resultIndex": 0,
          "type": "lookup",
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;

exports[`old streams test > without filter 1`] = `
{
  "buckets": [
    {
      "hash": 215141619,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 412397227,
      "partition_by": [],
      "table": {
        "connection": "default",
        "schema": "",
        "table": "comments",
      },
    },
  ],
  "parameterIndexes": [],
  "queriers": [
    {
      "bucket": 0,
      "lookupStages": [],
      "requestFilters": [],
      "sourceInstantiation": [],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": "unstable",
}
`;
